Fixed card body overflow issues...

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,7 +1,3 @@
-/* .project-button {
-    margin: 10px;
-} */
-
 .project-button {
     align-items: center;
     background-color: initial;
@@ -95,6 +91,9 @@
   }
 
 .card {
-    margin: 15px!important;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3), 0 3px 6px rgba(0, 0, 0, 0.05) !important;
+    margin: 15px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3), 0 3px 6px rgba(0, 0, 0, 0.05);
+}
+.card-body {
+  overflow-y: scroll;
 }
